WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36968
1 crash in Safari at com.apple.WebCore: WebCore::Element::getAttribute const + 63
https://bugs.webkit.org/show_bug.cgi?id=36968
Summary
1 crash in Safari at com.apple.WebCore: WebCore::Element::getAttribute const ...
chris fleizach
Reported
2010-04-01 10:00:31 PDT
There's a crasher when a select element has no options
Attachments
patch
(4.40 KB, patch)
2010-04-01 10:11 PDT
,
chris fleizach
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2010-04-01 10:11:28 PDT
Created
attachment 52306
[details]
patch
chris fleizach
Comment 2
2010-04-01 10:17:32 PDT
http://trac.webkit.org/changeset/56920
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug