Bug 36968 - 1 crash in Safari at com.apple.WebCore: WebCore::Element::getAttribute const https://bugs.webkit.org/show_bug.cgi?id=36968

Reviewed by Beth Dakin.

WebCore:

Test: accessibility/crash-with-noelement-selectbox.html

When a <select> element had no options, the selectedIndex == -1 and that was being
used to index into an empty array.

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::stringValue):

LayoutTests:

* accessibility/crash-with-noelement-selectbox-expected.txt: Added.
* accessibility/crash-with-noelement-selectbox.html: Added.



Canonical link: https://commits.webkit.org/48213@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56920 268f45cc-cd09-0410-ab3c-d52691b4dbfc